--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ flask
 gunicorn
 requests
 beautifulsoup4
-Flask==2.1.0
-pandas==1.3.3
-matplotlib==3.4.3
-seaborn==0.11.2
-scikit-learn==1.0
+pandas
+matplotlib
+seaborn
+scikit-learn
